# openblas-rs

./: Cargo.toml
openblas-sys/: Cargo.toml  LICENSE  build.rs
openblas-sys/OpenBLAS-0.3.21/cmake/: lapack.cmake
openblas-sys/OpenBLAS-0.3.21/kernel/riscv64/: scal_vector.c
