[package]
name = "openblas-sys"
version = "0.1.0+0.3.21"
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
build = "build.rs"
license = "BSD-3-Clause"
repository = "https://github.com/Alexhuszagh/openblas-rs"
homepage = "https://github.com/Alexhuszagh/openblas-rs"
documentation = "https://docs.rs/openblas-sys"
description = """
Raw bindings to the OpenBLAS library, an optimized BLAS library,
for the BLAS and LAPACK interface.
"""
categories = ["external-ffi-bindings"]

[features]
default = ["lapack"]
lapack = []

[build-dependencies]
cc = "1.0"
cmake = "0.1"
